--- a/kotlinProjects/kotlin-project/build.gradle
+++ b/kotlinProjects/kotlin-project/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     compile 'org.slf4j:slf4j-jdk14:1.7.25'
     compile 'com.google.code.gson:gson:2.8.0'
+    compile 'com.fasterxml.jackson.module:jackson-module-kotlin:2.8.4'
 }
 
 jar {
